Added Materialize Navbar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <title>Game Guidez</title>
 </head>
-<body>
-      
+<body class="grey lighten-3">
+      <!-- NAVBAR -->
+  <nav class="z-depth-0 grey lighten-4">
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo">
+          <img src="img/logo.svg" style="width: 180px; margin-top: 10px;">
+        </a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li class="logged-in">
+              <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
+            </li>
+            <li class="logged-in">
+              <a href="#" class="grey-text" id="logout">Logout</a>
+            </li>
+            <li class="logged-in">
+              <a href="#" class="grey-text modal-trigger" data-target="modal-create">Create Guide</a>
+            </li>
+            <li class="logged-out">
+              <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
+            </li>
+            <li class="logged-out">
+              <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+            </li>
+          </span>
+        </ul>
+      </div>
+    </nav>
+  
 </body>
 </html>
