--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
         </li>
       </ul>
     </div>
-  
+    
+   <!-- Compiled and minified JavaScript -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   <script src="scripts/auth.js"></script>
+   <script src="scripts/index.js"></script>
 </body>
 </html>
