--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
       </ul>
     </div>
     
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+      <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
+      <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+          apiKey: "AIzaSyAh8tAMbmukjPf_vvfDn9ZOW7fitdTHmqo",
+          authDomain: "game-guidez-26a83.firebaseapp.com",
+          projectId: "game-guidez-26a83",
+          storageBucket: "game-guidez-26a83.appspot.com",
+          messagingSenderId: "1095305145625",
+          appId: "1:1095305145625:web:2cbc1c3b757b707d716988"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        // make auth and firestore references
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+
+        //update firestore settings
+        db.settings({ timestampsInSnapshots: true })
+      </script>
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    <script src="scripts/auth.js"></script>
